增加远程调用组件